# cli-msn

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  README.md  cleanup  configure  configure.ac  curl-ca-bundle.crt  msn.conf
libs/: curl.h  easy.h  md5.c  md5.h  md5data.c  multi.h  types.h
libs/CVS/: Entries  Repository
src/: challenge.c  command.c  conf.c  contacts.c  conversation.c  dispatch.c  help.c  logging.c  msn.c  nexus.c  notification.c  notifperm.c  status.c  strings.c  switch.c  tcp_sock.c  time.c
src/headers/: cmd.h  command.h  conf.h  config.h  defs.h  global.h  help.h  msn.h  nexus.h  notification.h  notifperm.h  switch.h  tcp_sock.h  ticket.h  window.h
src/headers/CVS/: Entries  Repository
src/windows/: cmd.c  main.c
