bin_PROGRAMS = msn
msn_SOURCES = src/windows/main.c src/tcp_sock.c src/command.c src/dispatch.c \
          src/notification.c src/help.c src/notifperm.c src/switch.c \
          src/conf.c src/time.c libs/md5data.c libs/md5.c src/msn.c src/nexus.c \
	  src/contacts.c src/strings.c src/logging.c src/conversation.c src/windows/cmd.c \
	  src/status.c src/challenge.c
msn_LDFLAGS = -lcrypto -lcurses -lcurl -lpanel 
